--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                                 <h3>Piętro {this.floor_number}</h3>
                             </div>
                             <div style={{height: "50%", width: "100%"}} className="d-flex">
-                                <div style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-secondary elevator-button"><i className="bi bi-arrow-down"></i></div>
-                                <div style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-secondary elevator-button"><i className="bi bi-arrow-up"></i></div>
+                                <div style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-light elevator-button"><i className="bi bi-arrow-down"></i></div>
+                                <div style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-light elevator-button"><i className="bi bi-arrow-up"></i></div>
                             </div>
                         </div>
                     </React.Fragment>
@@ -80,7 +80,9 @@
                 return (
                     <React.Fragment>
                         <div className="elevator-section" onClick={() => this.getElevatorNum()}>
-                            <div className="elevator"></div>
+                            <div className="elevator text-center">
+                                <img src="./elevator.png"/>
+                            </div>
                         </div>
                     </React.Fragment>
                 )
