--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <div class="mx-auto text-center">
         <h1>Elevator Simulation</h1>
     </div>
+    <div class="loader"></div>
 
-    <div class="simulation-container mx-auto d-flex">
+    <div class="simulation-container mx-auto d-flex" id="sim-cont">
 
         <div class="floor-container" id="floor-root"></div>
 
