--- a/index.html
+++ b/index.html
@@ -44,10 +44,6 @@
                 this.floor_number = this.props.num;
             }
 
-            getFloorNum(){
-                console.log(this.floor_number);
-            }
-
             render() {
                 return (
                     <React.Fragment>
@@ -56,10 +52,10 @@
                                 <h3>Floor {this.floor_number}</h3>
                             </div>
                             <div style={{height: "50%", width: "100%"}} className="d-flex">
-                                <div style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-dark text-light elevator-button"
-                                onClick={() => sendRequest(this.floor_number)}><i className="bi bi-arrow-down"></i></div>
-                                <div style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-dark text-light elevator-button"
-                                onClick={() => sendRequest(this.floor_number)}><i className="bi bi-arrow-up"></i></div>
+                                <button id={"down_" + this.floor_number} style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-primary text-light elevator-button"
+                                onClick={() => sendRequest(this.floor_number)}><i className="bi bi-arrow-down"></i></button>
+                                <button id={"up_" + this.floor_number} style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-primary text-light elevator-button"
+                                onClick={() => sendRequest(this.floor_number)}><i className="bi bi-arrow-up"></i></button>
                             </div>
                         </div>
                     </React.Fragment>
@@ -73,14 +69,10 @@
                 this.elevator_number = this.props.num;
             }
 
-            getElevatorNum(){
-                console.log(this.elevator_number);
-            }
-
             render() {
                 return (
                     <React.Fragment>
-                        <div className="elevator-section" onClick={() => this.getElevatorNum()}>
+                        <div className="elevator-section">
                             <div className="elevator text-center" id={"elevator_" + this.elevator_number}>
                                 <div className="status-dial" id={"status_" + this.elevator_number}></div>
                                 <img src="./elevator.png"/>
