--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                                 <h3>Floor {this.floor_number}</h3>
                             </div>
                             <div style={{height: "50%", width: "100%"}} className="d-flex">
-                                <button id={"down_" + this.floor_number} style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-primary text-light elevator-button"
+                                <button id={"down_" + this.floor_number} style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-secondary text-light elevator-button"
                                 onClick={() => sendRequest(this.floor_number)}><i className="bi bi-arrow-down"></i></button>
-                                <button id={"up_" + this.floor_number} style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-primary text-light elevator-button"
+                                <button id={"up_" + this.floor_number} style={{height: "100%", width: "50%"}} className="text-center rounded-pill bg-secondary text-light elevator-button"
                                 onClick={() => sendRequest(this.floor_number)}><i className="bi bi-arrow-up"></i></button>
                             </div>
                         </div>
@@ -77,9 +77,30 @@
                                 <div className="status-dial" id={"status_" + this.elevator_number}></div>
                                 <img src="./elevator.png"/>
                                 <div className="direction-dial"></div>
+                                < FloorSelector num={this.elevator_number}/>
                             </div>
                         </div>
                     </React.Fragment>
+                )
+            }
+        }
+
+        class FloorSelector extends React.Component {
+            constructor(props){
+                super(props);
+                this.elevator_number = this.props.num;
+            }
+
+            render(){
+                return (
+                    <div className="selector-container d-flex flex-column">
+                        <h4>Wybierz piętro</h4>    
+                        <div className="row">       
+                        {floor_array.toReversed().map((item) =>
+                            <button className="btn column selector-button" key={item} onClick={() => sendRequestFromElevator(item, this.elevator_number)}>{item}</button>
+                        )}
+                        </div>
+                    </div>
                 )
             }
         }
