--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <div class="mx-auto text-center">
         <h1>Elevator Simulation</h1>
     </div>
-    <div class="loader"></div>
+    
+    <div class="loader-container d-flex">
+        <div class="loader"></div>
+    </div>
 
     <div class="simulation-container mx-auto d-flex" id="sim-cont">
 
@@ -77,6 +80,8 @@
                                 <div className="status-dial" id={"status_" + this.elevator_number}></div>
                                 <img src="./elevator.png"/>
                                 <div className="direction-dial"></div>
+                                <i className="bi bi-arrow-up" id={"arrow_up_" + this.elevator_number} style={{visibility: "hidden"}}/>
+                                <i className="bi bi-arrow-down"id={"arrow_down_" + this.elevator_number} style={{visibility: "hidden"}}/>
                                 < FloorSelector num={this.elevator_number}/>
                             </div>
                         </div>
